// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor snapshots block failed to load, Toast is shown 1`] = `
<EditorContainer
  getContent={
    Object {
      "getContent": Object {
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
      },
    }
  }
  onClose={[MockFunction props.onClose]}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <ImageUploadModal
      clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
      close={[MockFunction modal.closeModal]}
      editorRef={
        Object {
          "current": Object {
            "value": "something",
          },
        }
      }
      isOpen={false}
      selection="hooks.selectedImage.selection"
      setSelection={[MockFunction hooks.selectedImage.setSelection]}
    />
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={true}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <Editor
      editorConfig={
        Object {
          "blockValue": Object {
            "data": Object {
              "some": "eDiTablE Text",
            },
          },
          "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
          "initializeEditor": [MockFunction args.intializeEditor],
          "lmsEndpointUrl": "sOmEvaLue.cOm",
          "openModal": [MockFunction modal.openModal],
          "setEditorRef": [MockFunction hooks.prepareEditorRef.setEditorRef],
          "setSelection": [MockFunction hooks.selectedImage.setSelection],
        }
      }
    />
  </div>
</EditorContainer>
`;

exports[`TextEditor snapshots not yet loaded, Spinner appears 1`] = `
<EditorContainer
  getContent={
    Object {
      "getContent": Object {
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
      },
    }
  }
  onClose={[MockFunction props.onClose]}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <ImageUploadModal
      clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
      close={[MockFunction modal.closeModal]}
      editorRef={
        Object {
          "current": Object {
            "value": "something",
          },
        }
      }
      isOpen={false}
      selection="hooks.selectedImage.selection"
      setSelection={[MockFunction hooks.selectedImage.setSelection]}
    />
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={false}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <div
      className="text-center p-6"
    >
      <Spinner
        animation="border"
        className="m-3"
        screenreadertext="loading"
      />
    </div>
  </div>
</EditorContainer>
`;

exports[`TextEditor snapshots renders as expected with default behavior 1`] = `
<EditorContainer
  getContent={
    Object {
      "getContent": Object {
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
      },
    }
  }
  onClose={[MockFunction props.onClose]}
>
  <div
    className="editor-body h-75 overflow-auto"
  >
    <ImageUploadModal
      clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
      close={[MockFunction modal.closeModal]}
      editorRef={
        Object {
          "current": Object {
            "value": "something",
          },
        }
      }
      isOpen={false}
      selection="hooks.selectedImage.selection"
      setSelection={[MockFunction hooks.selectedImage.setSelection]}
    />
    <Toast
      onClose={[MockFunction hooks.nullMethod]}
      show={false}
    >
      <FormattedMessage
        defaultMessage="Error: Could Not Load Text Content"
        description="Error Message Dispayed When HTML content fails to Load"
        id="authoring.texteditor.load.error"
      />
    </Toast>
    <Editor
      editorConfig={
        Object {
          "blockValue": Object {
            "data": Object {
              "some": "eDiTablE Text",
            },
          },
          "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
          "initializeEditor": [MockFunction args.intializeEditor],
          "lmsEndpointUrl": "sOmEvaLue.cOm",
          "openModal": [MockFunction modal.openModal],
          "setEditorRef": [MockFunction hooks.prepareEditorRef.setEditorRef],
          "setSelection": [MockFunction hooks.selectedImage.setSelection],
        }
      }
    />
  </div>
</EditorContainer>
`;
